--- a/Audidesk.csproj
+++ b/Audidesk.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ini-parser" Version="2.5.2" />
     <PackageReference Include="NAudio" Version="2.2.1" />
   </ItemGroup>
 
